// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo esv secret import "frodo esv secret import --all-separate --directory  test/e2e/exports/all-separate/cloud/global/secret --include-active-values" Should not import all secrets and secret values in directory "test/e2e/exports/all-separate/cloud/global/secret" when no changes are made. 1`] = `""`;

exports[`frodo esv secret import "frodo esv secret import --all-separate --directory  test/e2e/exports/all-separate/cloud/global/secret --include-active-values" Should not import all secrets and secret values in directory "test/e2e/exports/all-separate/cloud/global/secret" when no changes are made. 2`] = `
"Importing all secrets from separate files in working directory...
⚠ Finished importing 0 secrets from 3 files.
"
`;

exports[`frodo esv secret import "frodo esv secret import --force-update --all --file test/e2e/exports/all/allSecrets.secret.json --include-active-values" Import all secrets and secret values from "test/e2e/exports/all/allSecrets.secret.json". 1`] = `""`;

exports[`frodo esv secret import "frodo esv secret import --force-update --all --file test/e2e/exports/all/allSecrets.secret.json --include-active-values" Import all secrets and secret values from "test/e2e/exports/all/allSecrets.secret.json". 2`] = `
"Importing all secrets from a single file (test/e2e/exports/all/allSecrets.secret.json)...
✔ Imported 3 secrets from test/e2e/exports/all/allSecrets.secret.json.
"
`;

exports[`frodo esv secret import "frodo esv secret import --force-update --all-separate --directory test/e2e/exports/all-separate/cloud/global/secret --include-active-values" Should import all secrets and secret values in directory "test/e2e/exports/all-separate/cloud/global/secret". 1`] = `""`;

exports[`frodo esv secret import "frodo esv secret import --force-update --all-separate --directory test/e2e/exports/all-separate/cloud/global/secret --include-active-values" Should import all secrets and secret values in directory "test/e2e/exports/all-separate/cloud/global/secret". 2`] = `
"Importing all secrets from separate files in working directory...
✔ Finished importing 3 secrets from 3 files.
"
`;

exports[`frodo esv secret import "frodo esv secret import --secret-id esv-test-secret --file test/e2e/exports/all/allSecrets.secret.json" Should not import secret "esv-test-secret" from "allSecrets.secret.json" when no changes are made. 1`] = `""`;

exports[`frodo esv secret import "frodo esv secret import --secret-id esv-test-secret --file test/e2e/exports/all/allSecrets.secret.json" Should not import secret "esv-test-secret" from "allSecrets.secret.json" when no changes are made. 2`] = `
"Importing secret esv-test-secret...
⚠ Did not import esv-test-secret since no changes were made.
"
`;

exports[`frodo esv secret import "frodo esv secret import -AD test/e2e/exports/all-separate/cloud/global/secret" Should not import all secrets in directory "test/e2e/exports/all-separate/cloud/global/secret" when no changes are made. 1`] = `""`;

exports[`frodo esv secret import "frodo esv secret import -AD test/e2e/exports/all-separate/cloud/global/secret" Should not import all secrets in directory "test/e2e/exports/all-separate/cloud/global/secret" when no changes are made. 2`] = `
"Importing all secrets from separate files in working directory...
⚠ Finished importing 0 secrets from 3 files.
"
`;

exports[`frodo esv secret import "frodo esv secret import -FAD test/e2e/exports/all-separate/cloud/global/secret" Import all secrets in directory "test/e2e/exports/all-separate/cloud/global/secret". 1`] = `""`;

exports[`frodo esv secret import "frodo esv secret import -FAD test/e2e/exports/all-separate/cloud/global/secret" Import all secrets in directory "test/e2e/exports/all-separate/cloud/global/secret". 2`] = `
"Importing all secrets from separate files in working directory...
✔ Finished importing 3 secrets from 3 files.
"
`;

exports[`frodo esv secret import "frodo esv secret import -Fa --file test/e2e/exports/all/allSecrets.secret.json" Import all secrets from "test/e2e/exports/all/allSecrets.secret.json". 1`] = `""`;

exports[`frodo esv secret import "frodo esv secret import -Fa --file test/e2e/exports/all/allSecrets.secret.json" Import all secrets from "test/e2e/exports/all/allSecrets.secret.json". 2`] = `
"Importing all secrets from a single file (test/e2e/exports/all/allSecrets.secret.json)...
✔ Imported 3 secrets from test/e2e/exports/all/allSecrets.secret.json.
"
`;

exports[`frodo esv secret import "frodo esv secret import -Ff esv-test-secret.secret.json --include-active-values --directory test/e2e/exports/all-separate/cloud/global/secret" Import first secret from "esv-test-secret.secret.json" in directory "test/e2e/exports/all-separate/cloud/global/secret". 1`] = `""`;

exports[`frodo esv secret import "frodo esv secret import -Ff esv-test-secret.secret.json --include-active-values --directory test/e2e/exports/all-separate/cloud/global/secret" Import first secret from "esv-test-secret.secret.json" in directory "test/e2e/exports/all-separate/cloud/global/secret". 2`] = `
"Importing first secret in file...
✔ Imported first secret.
"
`;

exports[`frodo esv secret import "frodo esv secret import -Ff test/e2e/exports/all/allSecrets.secret.json" Import first secret from "test/e2e/exports/all/allSecrets.secret.json". 1`] = `""`;

exports[`frodo esv secret import "frodo esv secret import -Ff test/e2e/exports/all/allSecrets.secret.json" Import first secret from "test/e2e/exports/all/allSecrets.secret.json". 2`] = `
"Importing first secret in file...
✔ Imported first secret.
"
`;

exports[`frodo esv secret import "frodo esv secret import -Fi esv-test-secret -f allSecrets.secret.json -D test/e2e/exports/all --include-active-values" Import secret "esv-test-secret" and value from "allSecrets.secret.json" in directory "test/e2e/exports/all". 1`] = `""`;

exports[`frodo esv secret import "frodo esv secret import -Fi esv-test-secret -f allSecrets.secret.json -D test/e2e/exports/all --include-active-values" Import secret "esv-test-secret" and value from "allSecrets.secret.json" in directory "test/e2e/exports/all". 2`] = `
"Importing secret esv-test-secret...
✔ Imported esv-test-secret.
"
`;

exports[`frodo esv secret import "frodo esv secret import -Fi esv-test-secret -f test/e2e/exports/all/allSecrets.secret.json" Import secret "esv-test-secret" from "test/e2e/exports/all/allSecrets.secret.json". 1`] = `""`;

exports[`frodo esv secret import "frodo esv secret import -Fi esv-test-secret -f test/e2e/exports/all/allSecrets.secret.json" Import secret "esv-test-secret" from "test/e2e/exports/all/allSecrets.secret.json". 2`] = `
"Importing secret esv-test-secret...
✔ Imported esv-test-secret.
"
`;

exports[`frodo esv secret import "frodo esv secret import -a -f allSecrets.secret.json -D test/e2e/exports/all" Should not import all secrets from "allSecrets.secret.json" in directory "test/e2e/exports/all-separate/cloud/global/secret" when no changes are made. 1`] = `""`;

exports[`frodo esv secret import "frodo esv secret import -a -f allSecrets.secret.json -D test/e2e/exports/all" Should not import all secrets from "allSecrets.secret.json" in directory "test/e2e/exports/all-separate/cloud/global/secret" when no changes are made. 2`] = `
"Importing all secrets from a single file (allSecrets.secret.json)...
⚠ Imported 0 secrets from test/e2e/exports/all/allSecrets.secret.json.
"
`;

exports[`frodo esv secret import "frodo esv secret import -af test/e2e/exports/all/allSecrets.secret.json --include-active-values" Should not import all secrets and secret values from "test/e2e/exports/all/allSecrets.secret.json" when no changes are made. 1`] = `""`;

exports[`frodo esv secret import "frodo esv secret import -af test/e2e/exports/all/allSecrets.secret.json --include-active-values" Should not import all secrets and secret values from "test/e2e/exports/all/allSecrets.secret.json" when no changes are made. 2`] = `
"Importing all secrets from a single file (test/e2e/exports/all/allSecrets.secret.json)...
⚠ Imported 0 secrets from test/e2e/exports/all/allSecrets.secret.json.
"
`;

exports[`frodo esv secret import "frodo esv secret import -f allSecrets.secret.json -D test/e2e/exports/all" Should not import first secret from "allSecrets.secret.json" in directory "test/e2e/exports/all" when no changes are made. 1`] = `""`;

exports[`frodo esv secret import "frodo esv secret import -f allSecrets.secret.json -D test/e2e/exports/all" Should not import first secret from "allSecrets.secret.json" in directory "test/e2e/exports/all" when no changes are made. 2`] = `
"Importing first secret in file...
⚠ Did not import first secret since no changes were made.
"
`;

exports[`frodo esv secret import "frodo esv secret import -f test/e2e/exports/all/allSecrets.secret.json --include-active-values" Should not import first secret from "test/e2e/exports/all/allSecrets.secret.json" when no changes are made. 1`] = `""`;

exports[`frodo esv secret import "frodo esv secret import -f test/e2e/exports/all/allSecrets.secret.json --include-active-values" Should not import first secret from "test/e2e/exports/all/allSecrets.secret.json" when no changes are made. 2`] = `
"Importing first secret in file...
⚠ Did not import first secret since no changes were made.
"
`;

exports[`frodo esv secret import "frodo esv secret import -i esv-test-secret -f test/e2e/exports/all/allSecrets.secret.json --include-active-values" Should not import secret "esv-test-secret" and secret value from "test/e2e/exports/all/allSecrets.secret.json" when no changes are made. 1`] = `""`;

exports[`frodo esv secret import "frodo esv secret import -i esv-test-secret -f test/e2e/exports/all/allSecrets.secret.json --include-active-values" Should not import secret "esv-test-secret" and secret value from "test/e2e/exports/all/allSecrets.secret.json" when no changes are made. 2`] = `
"Importing secret esv-test-secret...
⚠ Did not import esv-test-secret since no changes were made.
"
`;
